# moongate

./: .gitattributes  .gitignore  .gitmodules  .iex.exs  .iex.moongate.exs  .travis.yml  LICENSE.md  LICENSE.txt  Procfile  README.md  drop_db.sh  mix.exs  moongate  moongate.sublime-project  reset_db.sh  run.sh  setup.sh  setup_db.sh  socket_message.py  sourcefile  worlds
client/: deps.sh
config/: config.exs  config.json  server.json  test.exs
doc/: 404.html  Moongate.Application.html  Moongate.Auth.html  Moongate.AuthSessions.html  Moongate.AuthToken.html  Moongate.ClientEvent.html  Moongate.Data.html  Moongate.Db.User.html  Moongate.Db.UserQueries.html  Moongate.EventListener.html  Moongate.Events.Listener.html  Moongate.Events.Supervisor.html  Moongate.HTTP.Headers.html  Moongate.HTTP.Host.html  Moongate.HTTP.html  Moongate.Macros.ExternalResources.html  Moongate.Macros.Processes.html  Moongate.Macros.SocketWriter.html  Moongate.Macros.Worlds.html  Moongate.Packets.html  Moongate.Pool.html  Moongate.PoolMutation.html  Moongate.PoolState.html  Moongate.Pools.Pool.html  Moongate.Pools.Supervisor.html  Moongate.ProcessCapabilites.html  Moongate.Recursive.Supervisor.html  Moongate.Recursive.html  Moongate.RecursiveSwitch.html  Moongate.Repo.html  Moongate.Say.html  Moongate.Scopes.Events.html  Moongate.Scopes.Start.html  Moongate.SocketOrigin.html  Moongate.Sockets.HTTP.Supervisor.html  Moongate.Sockets.TCP.Socket.html  Moongate.Sockets.TCP.Supervisor.html  Moongate.Sockets.UDP.Socket.html  (+18 more)
lib/: app.ex  (+3 more)
native/mg_packets/: Cargo.toml
native/mg_packets/src/: lib.rs
(+777 files in other folders)
