[package]
name = "mg_packets"
version = "0.1.0"
authors = []

[lib]
name = "mg_packets"
path = "src/lib.rs"
crate-type = ["dylib"]

[build-dependencies]
rustler_codegen = { git = "https://github.com/hansihe/Rustler" }

[dependencies]
rustler = { git = "https://github.com/hansihe/Rustler" }
rustler_codegen = { git = "https://github.com/hansihe/Rustler" }
lazy_static = "0.2"
regex = "0.2"
